# tw-med-llm-qlora

./: .editorconfig  .env.example  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CITATION.cff  LICENSE  MANIFEST.in  PROJECT_PLAN.md  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: project.toml
model_card/: README.md
notebooks/: evaluate_phase4.ipynb  evaluate_phase4_full.ipynb  export_gguf.ipynb  train_qlora.ipynb
reports/: data_sample_validation.json  data_validation.json
reports/phase2/: 20260721T160727Z-receipt.json  20260721T160727Z-run-manifest.json  20260721T160727Z-validation.json
reports/phase3/: 20260721T171557Z-receipt.json  20260721T171557Z-run-manifest.json  20260721T171557Z-validation.json
reports/phase5/: 20260722T131736Z-acceptance.json  20260722T131736Z-validation.json  20260722T165957Z-publication-receipt.json  20260722T170446Z-publication-validation.json  20260723T080232Z-gguf-export-receipt.json  20260723T081846Z-ollama-acceptance.json  20260723T104400Z-ollama-vlm-acceptance.json
reports/phase6/: v0.1.0-hosted-ci.json  v0.1.0-install-smoke.json  v0.1.0-package-audit.json
requirements/: colab-eval.txt  colab-export.txt  colab-train.txt
scripts/: audit_release_artifacts.py  build_eval_notebook.py  build_export_notebook.py  build_full_eval_notebook.py  build_train_notebook.py  colab_recover_phase3_eval_nan.py  run_ollama_acceptance.ps1  run_ollama_vlm_acceptance.ps1  run_phase5_acceptance.ps1  smoke_release_install.py
tests/: test_checkpointing.py  test_ci_workflow.py  test_config.py  test_cost.py  test_data_cleaning.py  test_eval_notebook.py  test_evaluation.py  test_export_notebook.py  test_filesystem.py  test_full_eval_notebook.py  test_gguf_evidence.py  test_local_inference.py  test_medqa.py  test_notebook.py  test_ollama_acceptance_script.py  test_ollama_vlm_acceptance_script.py  test_phase2_evidence.py  test_phase3_evidence.py  test_phase3_full_evidence.py  test_phase4.py  test_phase4_evidence.py  test_phase4_full.py  test_phase4_full_evidence.py  test_phase5_evidence.py  test_phase5_readiness.py  test_phase7_publication.py  test_project_skill.py  test_public_snapshot.py  test_publication.py  test_release_artifacts.py  test_tmmlu.py  test_types.py
(+60 files in other folders)
